# voice-agent-samples

./: .gitignore  README.md
handoff/LangGraph-AGUI/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
samples/agent-framework-agent-basic-responses/: agent.manifest.yaml  agent.yaml  main.py
samples/agent-framework-agent-foundryiq/: README.md  agent.manifest.yaml  agent.yaml  requirements.txt
samples/agent-framework-agent-foundryiq/aisearch/: MANUAL_PORTAL_SETUP_GUIDE.md  sample.setup.env  setup_foundry_iq_resources.py
samples/github-copilot-python-responses-voicelive/: .env.example  Dockerfile  README.md  agent.manifest.yaml  agent.yaml  main.py  requirements.txt
samples/handoff-langgraph-responses-voicelive/: .dockerignore  .env.example  Dockerfile  README.md  agent.manifest.yaml  agent.yaml  main.py  requirements.txt
samples/handoff-langgraph-responses-voicelive/webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
samples/handoff-langgraph-responses-voicelive/webui/src/: main.ts
samples/handoff-maf-responses-voicelive/: .env.example  README.md  agent.manifest.yaml  agent.yaml  main.py  requirements.txt
