[project]
name = "langgraph-swarm-handoff"
version = "0.1.0"
description = "LangGraph Swarm handoff demo"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-swarm>=0.0.3",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx[socks]>=0.28.1",
]
